--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 html {
     font-size: 10px;
     font-family: 'Prosto One', sans-serif;
