--- a/style.css
+++ b/style.css
@@ -7,14 +7,17 @@
     box-sizing: border-box;
 }
 
-body{
-    overflow-x: hidden;
-}
-
-html {
-    font-size: 10px;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     font-family: 'Prosto One', sans-serif;
+    font-size: 10px;
     scroll-behavior: smooth;
+    overflow-x: hidden; 
+	
 }
 
 a {
